--- a/SfLogger/MainWindow.xaml
+++ b/SfLogger/MainWindow.xaml
@@ -131,18 +131,50 @@
 
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" >
-        <Button Grid.Row="0" Name="fetchBtn" IsEnabled="false" HorizontalAlignment="Left" Margin="10,0,10,0" VerticalAlignment="Center"
-                Click="fetchBtn_Click" Background="#FF292929" Foreground="#FF8F8F8F">Fetch logs</Button>
-        <Button Grid.Row="0" Name="registerBtn" IsEnabled="false" HorizontalAlignment="Left" Margin="10,0,10,0" VerticalAlignment="Center"
+                <Button Grid.Row="0" Name="startBtn" IsEnabled="false" HorizontalAlignment="Left" Margin="10,0,10,0" VerticalAlignment="Center"
+                Click="startBtn_Click" Background="#FF292929" Foreground="#FF8F8F8F">Start polling</Button>
+                <Button Grid.Row="0" Name="registerBtn" IsEnabled="false" HorizontalAlignment="Left" Margin="10,0,10,0" VerticalAlignment="Center"
                 Click="registerBtn_Click" Background="#FF292929" Foreground="#FF8F8F8F">Refresh log limit (20)</Button>
-            <CheckBox IsChecked="{Binding onTop, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Checked="onTopBox_Checked" Unchecked="onTopBox_Checked"  Name="onTopBox"  VerticalAlignment="Center" Margin="20,0,0,0" Foreground="Gray">Allways on top</CheckBox>
+                <Button Grid.Row="0"   IsEnabled="true" HorizontalAlignment="Left" Margin="5,0,3,0" VerticalAlignment="Center"
+                Click="TimerBtn_Click" x:Name="TimerBtn" x:FieldModifier="public"  Background="#FF292929" Foreground="#FF8F8F8F">Start Timer</Button>
+                <TextBox Name="refTime" Text="15" IsEnabled="True" HorizontalAlignment="Left" Margin="1,0,10,0" VerticalAlignment="Center" Height="18" Width="20" />
+                <Label Grid.Row="0"   IsEnabled="true" HorizontalAlignment="Left" Margin="3,0,3,0" VerticalAlignment="Center"
+                Foreground="#FF8F8F8F">Limit logging:</Label>
+                <TextBox Name="logLimit" Text="50" IsEnabled="True" HorizontalAlignment="Left" Margin="1,0,10,0" VerticalAlignment="Center" Height="18" Width="20" />
+                <CheckBox IsChecked="{Binding onTop, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Checked="onTopBox_Checked" Unchecked="onTopBox_Checked"  Name="onTopBox"  VerticalAlignment="Center" Margin="8,0,0,0" Foreground="Gray">Allways on top</CheckBox>
         </StackPanel>
         
 
         <ScrollViewer Grid.Row="1" >
             <ItemsControl HorizontalAlignment="Stretch"  ItemsSource="{Binding Logs}"
-                           VerticalAlignment="Stretch" Name="outBox" AlternationCount="2">
-
+                           VerticalAlignment="Stretch" Name="outBox"   AlternationCount="2" RenderTransformOrigin="0.5,0.5">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Left">
+                            <WrapPanel.LayoutTransform>
+                                <ScaleTransform ScaleX="1" ScaleY="-1" />
+                            </WrapPanel.LayoutTransform>
+                        </WrapPanel>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemContainerStyle>
+                    <Style TargetType="ContentPresenter">
+                        <Setter Property="ContentTemplate">
+                            <Setter.Value>
+                                <DataTemplate>
+                                    <Button Width="100" Height="100" Margin="10">
+                                        <ContentPresenter Content="{Binding}"/>
+                                    </Button>
+                                </DataTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Property="LayoutTransform">
+                            <Setter.Value>
+                                <ScaleTransform ScaleX="1" ScaleY="-1" />
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ItemsControl.ItemContainerStyle>
                 
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
